# hpctoolkit-tests

./: README.md
applications/2unwinders/: 2unwinders-omp.cpp  Makefile
applications/AMG2006/: Makefile.include
applications/AMG2006/test/: Makefile  run-amg.sh
applications/AMG2013/: Makefile.include
applications/amgmk-v1.0/: Makefile  Makefile.bgq  Makefile.gcc  Makefile.gnu  Makefile.icc  Makefile.intel  Makefile.pathscale  Makefile.run  Makefile.xlc  main.c
applications/dltest/: Makefile  bar.c  foo.c  main.c
applications/early-init/: Makefile  main.c
applications/fib/: Makefile  fib.c
applications/fib-noread/: Makefile  fib.c  libfib.c  libfib.h
applications/fib-pg/: Makefile  bar.c  fib.c
applications/fib-pg-static/: .fib.c.swp  Makefile
applications/fib-static/: Makefile
applications/hello/: Makefile  hello-c.c  hello-f.f  hello-f90.f90
applications/loop/: Makefile
applications/loop-mpi/: Makefile  loop-mpi.c
applications/loop-omp/: Makefile  loop.c
applications/loop-suite/10.loop-openmp-papi/: Makefile
applications/loop-suite/11.loop-mpi-papi/: Makefile
applications/loop-suite/12.loop-fork-exec-papi/: Makefile  loop.c
applications/loop-suite/13.shell-fork-cputime/: Makefile
applications/loop-suite/14.shell-fork-cycles/: Makefile
applications/loop-suite/15.shell-fork-papi/: Makefile  loop.c  shell
applications/loop-suite/2.loop-fork-cputime/: Makefile
applications/loop-suite/3.loop-fork-cycles/: Makefile
applications/loop-suite/4.loop-mpi-cycles/: Makefile  loop.c
applications/loop-suite/5.loop-mpi-cputime/: Makefile
applications/loop-suite/6.1.loop-openmp-task-cputime/: Makefile  loop.c
applications/loop-suite/6.loop-openmp-cputime/: Makefile
applications/loop-suite/7.loop-openmp-cycles/: Makefile  loop.c
applications/loop-suite/8.1.loop-fork-exec-papi/: Makefile  Makefile.child  child.c
applications/lulesh/: Makefile
applications/many-cuda-funcs/: Makefile  compute.h  macros.h  main.h
applications/many-funcs/: Makefile  compute.h  definitions.h  macros.h  main.h
applications/mpi-vector-add/: Makefile  main.cpp  vecadd.cu
applications/omp-blame/: Makefile  omp-blame.c  run.sh  timer.h
applications/pagefaults/: Makefile  main.c
catchthrow/: Makefile  catchthrow.cc
cplus/: LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.plain  README  config.h.in  configure  configure.ac  map-sum.cpp  monitor.c  monitor.h  realtime.c  run.sh  trace.cpp
dyninst/: CMakeLists.txt  Makefile  Makefile.dyninst  README  callback.cpp  cilk-parse.cpp  find-gaps.cpp  makefile  mk-dyninst.sh  openmp-inline.cpp  openmp-loops.cpp  openmp-parse.cpp  openmp-symtab.cpp
dyninst/cuda/: CFGParser.cpp  CFGParser.hpp  CudaCFGFactory.cpp  CudaCFGFactory.hpp  CudaCodeSource.cpp  CudaCodeSource.hpp  DotCFG.hpp  ElfHelper.cpp  Fatbin.cpp  GraphReader.cpp  InputFile.cpp  Line.hpp  LineInfoDecoder.hpp  LineInfoDecoderDump.hpp  LineMapping.cpp  LineMapping.hpp  Make.template  Makefile  README  ReadCubinLineMap.cpp  ReadCubinLineMap.hpp  cuda-parse.cpp
dyninst/nm-dso/: README  main.c
dyninst/nm-dso/load-modules/: vdso-knl
dyninst/vdso-symbols/: Makefile  Makefile.dyninst  README  symbols.cpp
dyninst/vdso-symbols/load-modules/: vdso-ubuntu
hpcstruct-test-script/: README.md  hpcstruct-test.py
iterate_phdr/: main  main.c
mxm/: Makefile.include
mxm/c/: Makefile  runjob.sh  submit.sh
mxm/cpp/: Makefile
mxm/f90/: Makefile
ompt-tests/: Makefile  Makefile.run  README.md  config  demangle.c  fibtask.c  for-nested-functions.c  for.c  looptest.c  morenested.c  nested-and-nested.c  nested-functions.c  nested-not-master-inner.c  nested-not-master.c  nested-siblings.c  nested.c  nested3-functions.c  nested3-not-master-inner.c  nested3-not-master.c  nested3-post.c  nested3.c  one.c  prof-script.sh  sectionstest.c  simple-not-master.c  striped.c  test.c  three.c  torture
stress/dlstress/: Makefile  dlstress.c  sum.c
stress/memstress/: Makefile  memstress.c
unit-test/cpp_threads/: Makefile  fib_thread.cxx  fib_thread.h  main_fib.cxx
unit-test/inline_fib/: Makefile  directive.h  fib.h  fib_omp.c  fib_omp.h  main_fib.c
unit-test/inline_for/: Makefile  inline_f.h
unit-test/inline_for_rec/: Makefile  inline_f.c  main.c  proc.list
unit-test/inline_macro/: .inline_f.c.swp  Makefile  inline_f.c
unit-test/inline_sleep/: inline_f.c  inline_f.h  main.c
unit-test/inlines/: inline_f.c
unit-test/omp_mxm/: Makefile  directive.h  omp_helper.h  omp_mm.c
unit-test/runpath/: Makefile  README  test.c
vdso/: Makefile  README  testvdso.c
vdso/precious/: testvdso
(+60 files in other folders)
